--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -60,7 +60,7 @@
                                 <div class="inline-flex items-end justify-between w-full mt-1.5">
                                     <a
                                             class="text-md font-medium text-primary-500 hover:underline"
-                                            [routerLink]="['forgot-password']">forgot password?
+                                            [routerLink]="['/forgot-password']">forgot password?
                                     </a>
                                     <!-- <a class="text-primary underline fw-bold" [routerLink]="['/register']">
                                         Sign Up
