--- a/src/app/components/store-checkout/store-checkout.component.html
+++ b/src/app/components/store-checkout/store-checkout.component.html
@@ -16,6 +16,10 @@
   <form>
     <!-- Credit Card Option -->
     <div class="mb-3">
+      <div class="d-flex" style="padding-left: 1.5rem;">
+        <strong>Total Amount:</strong> &nbsp;
+        <span>{{totalAmount}} USD</span>
+      </div>
       <div class="form-check w-100 d-flex justify-content-between " style="place-items: end;">
         <label class="form-check-label">Credit or Debit Card</label>
         <!-- Credit card logos -->
