--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,42 +1,44 @@
 <div class="main-content">
   <div class="container-fluid">
-
     <div class="row px-5">
       <div class="col-lg-12 col-md-12 col-sm-12">
-        <button class="btn-primary btn text-end" (click)="AddUpdateDevice()" mat-raised-button>
-          <mat-icon style="line-height: 23px;">add</mat-icon>
+        <button
+          class="btn-primary btn text-end"
+          (click)="AddUpdateDevice()"
+          mat-raised-button
+        >
+          <mat-icon style="line-height: 23px">add</mat-icon>
           Add Device
         </button>
       </div>
     </div>
     <div class="row px-5">
-      <div class="col-lg-2  col-md-4 col-sm-4"  *ngIf="devices.length==0">
-      <div class="card card-stats">
-        <div
-          class="card-header text-start card-header-warning card-header-icon"
-        >
-          <div class="card-icon">
-            <img src="assets/img/apple-icon-.png" />
-          </div>
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="">
-              <!-- <label class="mt-3">
+      <div class="col-12">
+        <div class="card card-stats" *ngIf="devices.length == 0">
+          <div
+            class="card-header text-start card-header-warning card-header-icon pb-4"
+          >
+            <div class="card-icon">
+              <img src="assets/img/apple-icon-.png" />
+            </div>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="">
+                <!-- <label class="mt-3">
                 {{ device.device_category }}
               </label> -->
-              <h4 class="card-title">
-                <!-- {{ device.device_name }} -->
-                No Device Added!
-              </h4>
+                <h4 class="card-title">
+                  <!-- {{ device.device_name }} -->
+                  No Device Added!
+                </h4>
+              </div>
             </div>
-          
           </div>
-        </div>
-        <!-- <div class="card-footer">
+          <!-- <div class="card-footer">
           <div class="stats">
             {{ device.device_status }}
           </div>
         </div> -->
-      </div>
+        </div>
         <div class="card card-stats" *ngFor="let device of devices">
           <div
             class="card-header text-start card-header-warning card-header-icon"
@@ -53,7 +55,6 @@
                   {{ device.device_name }}
                 </h3>
               </div>
-            
             </div>
           </div>
           <div class="card-footer">
@@ -65,8 +66,7 @@
         </div>
       </div>
     </div>
-
-    <div class="row">
+    <!-- <div class="row" *ngIf="devices.length > 0">
       <div class="col-lg-12">
         <p class="text-end text-right">
           <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
@@ -79,10 +79,9 @@
           </button>
         </p>
       </div>
-    </div>
+    </div> -->
 
-
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-lg-12">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 
@@ -175,6 +174,6 @@
 
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
