--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -60,6 +60,7 @@
           <div class="card-footer">
             <div class="stats">
               <!-- <i class="material-icons">update</i> Just Updated -->
+              <span class="rounded-circle"></span>
               {{ device.device_status }}
             </div>
           </div>
