--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,6 +10,10 @@
           <mat-icon style="line-height: 23px">add</mat-icon>
           Add Device
         </button>
+        <a class="btn-primary btn text-end" href="https://myvyky.com/booking/" target="_blank">
+          <mat-icon style="line-height: 23px">add_shopping_carts</mat-icon>
+          Purchase
+        </a>
       </div>
     </div>
     <div class="row px-5">
