--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-
+@import 'material-icons/iconfont/material-icons.css';
 @import '~ngx-toastr/toastr.css';
 
 /* You can add global styles to this file, and also import other style files */
