--- a/src/app/modules/storeFront/storeFront/storeFront.component.html
+++ b/src/app/modules/storeFront/storeFront/storeFront.component.html
@@ -1,5 +1,149 @@
 <div class="main-content">
   <div class="container-fluid">
+      <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3">
+          <div class="heading col-lg-4">
+              <button class="searchbutton" type ="submit"><i class="fa fa-search"                          ></i></button>
+              <input type="search" placeholder="izlash" class="searchfield ">
+          </div>
+      </div>
+
+
+      <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3">
+          <div class="col hp">
+              <div class="card pb-4 shadow-sm rounded">
+                  <a class="bg- rounded"  href="https://amzn.to/42dsdGC" target="_blank">
+                      <img src="assets/img/dinner.png" class="card-img-top" alt="product.title" />
+                  </a>
+
+                  <div class="label-top  ">
+                      <i class="far fa-heart shadow-sm p-2 rounded bg-white" style="cursor: pointer"></i>
+
+                  </div>
+                  <div class="card-body py-0">
+                      <div class="  flex d-flex justify-content-between align-items-center">
+                          <h3 class="px-0 float-start badge rounded-pill bg-success">Recipe Name</h3>
+
+                          <h3 class="float-end"><a href="#" class="font-weight-bold text-uppercase aff-link">$123</a></h3>
+                      </div>
+                      <h5 class="card-title">
+                          <a class="small" target="_blank" href="#">Razer Blade 15 Base Gaming Laptop 2020</a>
+                      </h5>
+
+                      <div class="d-grid gap-2 ">
+
+                          <button href="#" class="btn btn-outline-primary rounded-pill">add to cart</button>
+
+                      </div>
+
+                  </div>
+              </div>
+          </div>
+          <div class="col hp">
+              <div class="card pb-4 shadow-sm rounded">
+                  <a class="bg- rounded"  href="https://amzn.to/42dsdGC" target="_blank">
+                      <img src="assets/img/dinner.png" class="card-img-top" alt="product.title" />
+                  </a>
+
+                  <div class="label-top  ">
+                      <i class="far fa-heart shadow-sm p-2 rounded bg-white" style="cursor: pointer"></i>
+
+                  </div>
+                  <div class="card-body py-0">
+                      <div class="  flex d-flex justify-content-between align-items-center">
+                          <h3 class="px-0 float-start badge rounded-pill bg-success">Recipe Name</h3>
+
+                          <h3 class="float-end"><a href="#" class="font-weight-bold text-uppercase aff-link">$123</a></h3>
+                      </div>
+                      <h5 class="card-title">
+                          <a class="small" target="_blank" href="#">Razer Blade 15 Base Gaming Laptop 2020</a>
+                      </h5>
+
+                      <div class="d-grid gap-2 ">
+
+                          <button href="#" class="btn btn-outline-primary rounded-pill">add to cart</button>
+
+                      </div>
+
+                  </div>
+              </div>
+          </div>
+          <div class="col hp">
+              <div class="card pb-4 shadow-sm rounded">
+                  <a class="bg- rounded"  href="https://amzn.to/42dsdGC" target="_blank">
+                      <img src="assets/img/dinner.png" class="card-img-top" alt="product.title" />
+                  </a>
+
+                  <div class="label-top  ">
+                      <i class="far fa-heart shadow-sm p-2 rounded bg-white" style="cursor: pointer"></i>
+
+                  </div>
+                  <div class="card-body py-0">
+                      <div class="  flex d-flex justify-content-between align-items-center">
+                          <h3 class="px-0 float-start badge rounded-pill bg-success">Recipe Name</h3>
+
+                          <h3 class="float-end"><a href="#" class="font-weight-bold text-uppercase aff-link">$123</a></h3>
+                      </div>
+                      <h5 class="card-title">
+                          <a class="small" target="_blank" href="#">Razer Blade 15 Base Gaming Laptop 2020</a>
+                      </h5>
+
+                      <div class="d-grid gap-2 ">
+
+                          <button href="#" class="btn btn-outline-primary rounded-pill">add to cart</button>
+
+                      </div>
+
+                  </div>
+              </div>
+          </div>
+          <div class="col hp">
+              <div class="card pb-4 shadow-sm rounded">
+                  <a class="bg- rounded"  href="https://amzn.to/42dsdGC" target="_blank">
+                      <img src="assets/img/dinner.png" class="card-img-top" alt="product.title" />
+                  </a>
+
+                  <div class="label-top  ">
+                      <i class="far fa-heart shadow-sm p-2 rounded bg-white" style="cursor: pointer"></i>
+
+                  </div>
+                  <div class="card-body py-0">
+                      <div class="  flex d-flex justify-content-between align-items-center">
+                          <h3 class="px-0 float-start badge rounded-pill bg-success">Recipe Name</h3>
+
+                          <h3 class="float-end"><a href="#" class="font-weight-bold text-uppercase aff-link">$123</a></h3>
+                      </div>
+                      <h5 class="card-title">
+                          <a class="small" target="_blank" href="#">Razer Blade 15 Base Gaming Laptop 2020</a>
+                      </h5>
+
+                      <div class="d-grid gap-2 ">
+
+                          <button href="#" class="btn btn-outline-primary rounded-pill">add to cart</button>
+
+                      </div>
+
+                  </div>
+              </div>
+          </div>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       <div class="row">
           <div class="col-md-12">
 
