--- a/src/app/modules/storeFront/storeFront/storeFront.component.html
+++ b/src/app/modules/storeFront/storeFront/storeFront.component.html
@@ -1,3 +1,6 @@
+
+
+
 <div class="main-content">
   <div class="container-fluid">
       <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3">
@@ -6,7 +9,6 @@
               <input type="search" placeholder="izlash" class="searchfield ">
           </div>
       </div>
-
 
       <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3">
           <div class="col hp">
@@ -158,7 +160,7 @@
                                   <mat-form-field class="example-full-width position-relative " appearance="outline">
                                       <mat-label>Favorite Recipe</mat-label>
                                       <input matInput placeholder="Ex. Pizza" [(ngModel)]="item">
-                                      <mat-icon class="position-absolute" style="right: 0px;cursor: pointer;" (click)="startVoiceSearch()">mic</mat-icon>
+                                      <mat-icon class="position-absolute" style="right: 0px;cursor: pointer; top: 7px;" (click)="startVoiceSearch()">mic</mat-icon>
                                   </mat-form-field>
                                   <button class="btn btn-dark mt-3" (click)="searchRecipe();">Find Recipe</button>
                               </div>
@@ -171,10 +173,45 @@
 
 
 
-
           </div>
       </div>
-  </div>
+
+
+
+      <div class="row mt-3">
+          <div class="col-md-12">
+
+              <select class="custom-select w-100 mr-4">
+                  <option>Choose...</option>
+                  <option value="volvo">Volvo</option>
+                  <option value="saab">Saab</option>
+                  <option value="mercedes">Mercedes</option>
+                  <option value="audi">Audi</option>
+              </select>
+              <select class="custom-select w-100 mr-4">
+                  <option>Choose...</option>
+                  <option value="volvo">Volvo</option>
+                  <option value="saab">Saab</option>
+                  <option value="mercedes">Mercedes</option>
+                  <option value="audi">Audi</option>
+              </select>
+              <select class="custom-select w-100 mr-4">
+                  <option>Choose...</option>
+                  <option value="volvo">Volvo</option>
+                  <option value="saab">Saab</option>
+                  <option value="mercedes">Mercedes</option>
+                  <option value="audi">Audi</option>
+              </select>
+              <select class="custom-select w-100 mr-4">
+                  <option>Choose...</option>
+                  <option value="volvo">Volvo</option>
+                  <option value="saab">Saab</option>
+                  <option value="mercedes">Mercedes</option>
+                  <option value="audi">Audi</option>
+              </select>
+          </div>
+
+      </div>
 
 
 
