--- a/src/app/modules/storeFront/storeFront/storeFront.component.scss
+++ b/src/app/modules/storeFront/storeFront/storeFront.component.scss
@@ -285,3 +285,24 @@ h5{
   box-shadow: inset 3px 5px 0px -4px rgba(0, 0, 0, 0.06);
   background-color: #fff;
 }
+.custom-select {
+  appearance: none;
+  border-radius: 20px;
+  border: 1px solid #ced4da;
+  padding: 0.5rem 1rem;
+  outline: none;
+  width: 100%;
+  max-width: 200px;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
+  background-color: white;
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"%3E%3Cpath fill="%236c757d" d="M7 10l5 5 5-5z"%3E%3C/path%3E%3C/svg%3E');
+  background-repeat: no-repeat;
+  background-position: right 0.75rem center;
+  background-size: 24px 24px; /* Increased icon size */
+}
+.custom-select:focus {
+  border-color: #80bdff;
+  box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+}
+
+
